--- a/projects/first-paint/components/img.scss
+++ b/projects/first-paint/components/img.scss
@@ -8,9 +8,26 @@ $render: true !default;
     img[alt] {
       max-width: 100%;
       height: auto;
-      display: flex;
-      align-items: center;
-      position: relative;
+
+      &::after {
+        min-height: 48px;
+        height: 100%;
+        width: 100%;
+        content: "\2716"" "attr(alt);
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        background-color: whitesmoke;
+        border-radius: 0.1rem;
+        color: gray;
+        background-repeat: no-repeat;
+        text-transform: uppercase;
+        border: 1px solid lightgray;
+
+      }
     }
 
     #{$className, $className, '.fp-picture'},
@@ -34,29 +51,8 @@ $render: true !default;
 
     width: 100%;
     height: auto;
-    display: flex;
-    align-items: center;
     position: relative;
 
-    &::after {
-      min-height: 48px;
-      height: 100%;
-      width: 100%;
-      content: "\2716"" "attr(alt);
-      position: absolute;
-      top: 0;
-      left: 0;
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      background-color: lightgrey;
-      border-radius: 0.1rem;
-      color: darkgray;
-      background-repeat: no-repeat;
-      text-transform: uppercase;
-      border: 2px solid darkgray;
-
-    }
 
   }
 
