--- a/projects/first-paint/custom-styles.css
+++ b/projects/first-paint/custom-styles.css
@@ -1,5 +1,6 @@
 a[role=button],
 .fp-button-link[role=button] {
+  display: inline-flex;
   text-decoration: none;
   background-color: transparent;
   border: none;
